// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiService getAssets (backspin) gets the correct assets for testnets (Bitcoin) 1`] = `
[
  {
    "chain": "Bitcoin",
    "contractAddress": undefined,
    "decimals": 8,
    "id": "BTC",
    "isMainnet": false,
    "minimumDepositAmount": "0",
    "minimumSwapAmount": "0",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`ApiService getAssets (backspin) gets the correct assets for testnets (Ethereum) 1`] = `
[
  {
    "chain": "Ethereum",
    "contractAddress": undefined,
    "decimals": 18,
    "id": "ETH",
    "isMainnet": false,
    "minimumDepositAmount": "0",
    "minimumSwapAmount": "0",
    "name": "Ether",
    "symbol": "ETH",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0",
    "decimals": 6,
    "id": "USDC",
    "isMainnet": false,
    "minimumDepositAmount": "0",
    "minimumSwapAmount": "0",
    "name": "USDC",
    "symbol": "USDC",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0x10C6E9530F1C1AF873a391030a1D9E8ed0630D26",
    "decimals": 18,
    "id": "FLIP",
    "isMainnet": false,
    "minimumDepositAmount": "0",
    "minimumSwapAmount": "0",
    "name": "FLIP",
    "symbol": "FLIP",
  },
]
`;

exports[`ApiService getAssets (backspin) gets the correct assets for testnets (Polkadot) 1`] = `
[
  {
    "chain": "Polkadot",
    "contractAddress": undefined,
    "decimals": 10,
    "id": "DOT",
    "isMainnet": false,
    "minimumDepositAmount": "0",
    "minimumSwapAmount": "0",
    "name": "Polkadot",
    "symbol": "DOT",
  },
]
`;

exports[`ApiService getAssets (mainnet) gets the correct assets for testnets (Bitcoin) 1`] = `
[
  {
    "chain": "Bitcoin",
    "contractAddress": undefined,
    "decimals": 8,
    "id": "BTC",
    "isMainnet": true,
    "minimumDepositAmount": "0",
    "minimumSwapAmount": "0",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`ApiService getAssets (mainnet) gets the correct assets for testnets (Polkadot) 1`] = `
[
  {
    "chain": "Polkadot",
    "contractAddress": undefined,
    "decimals": 10,
    "id": "DOT",
    "isMainnet": true,
    "minimumDepositAmount": "0",
    "minimumSwapAmount": "0",
    "name": "Polkadot",
    "symbol": "DOT",
  },
]
`;

exports[`ApiService getAssets (perseverance) gets the correct assets for testnets (Bitcoin) 1`] = `
[
  {
    "chain": "Bitcoin",
    "contractAddress": undefined,
    "decimals": 8,
    "id": "BTC",
    "isMainnet": false,
    "minimumDepositAmount": "0",
    "minimumSwapAmount": "1000",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`ApiService getAssets (perseverance) gets the correct assets for testnets (Ethereum) 1`] = `
[
  {
    "chain": "Ethereum",
    "contractAddress": undefined,
    "decimals": 18,
    "id": "ETH",
    "isMainnet": false,
    "minimumDepositAmount": "0",
    "minimumSwapAmount": "580000000000000",
    "name": "Ether",
    "symbol": "ETH",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0x07865c6E87B9F70255377e024ace6630C1Eaa37F",
    "decimals": 6,
    "id": "USDC",
    "isMainnet": false,
    "minimumDepositAmount": "0",
    "minimumSwapAmount": "1000000",
    "name": "USDC",
    "symbol": "USDC",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0x0485D65da68b2A6b48C3fA28D7CCAce196798B94",
    "decimals": 18,
    "id": "FLIP",
    "isMainnet": false,
    "minimumDepositAmount": "0",
    "minimumSwapAmount": "1000000000000000000",
    "name": "FLIP",
    "symbol": "FLIP",
  },
]
`;

exports[`ApiService getAssets (perseverance) gets the correct assets for testnets (Polkadot) 1`] = `
[
  {
    "chain": "Polkadot",
    "contractAddress": undefined,
    "decimals": 10,
    "id": "DOT",
    "isMainnet": false,
    "minimumDepositAmount": "10000000000",
    "minimumSwapAmount": "2000000000",
    "name": "Polkadot",
    "symbol": "DOT",
  },
]
`;

exports[`ApiService getAssets (sisyphos) gets the correct assets for testnets (Bitcoin) 1`] = `
[
  {
    "chain": "Bitcoin",
    "contractAddress": undefined,
    "decimals": 8,
    "id": "BTC",
    "isMainnet": false,
    "minimumDepositAmount": "0",
    "minimumSwapAmount": "0",
    "name": "Bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`ApiService getAssets (sisyphos) gets the correct assets for testnets (Ethereum) 1`] = `
[
  {
    "chain": "Ethereum",
    "contractAddress": undefined,
    "decimals": 18,
    "id": "ETH",
    "isMainnet": false,
    "minimumDepositAmount": "0",
    "minimumSwapAmount": "0",
    "name": "Ether",
    "symbol": "ETH",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0x07865c6E87B9F70255377e024ace6630C1Eaa37F",
    "decimals": 6,
    "id": "USDC",
    "isMainnet": false,
    "minimumDepositAmount": "0",
    "minimumSwapAmount": "0",
    "name": "USDC",
    "symbol": "USDC",
  },
  {
    "chain": "Ethereum",
    "contractAddress": "0x2BbB561C6eaB74f358cA9e8a961E3A20CAE3D100",
    "decimals": 18,
    "id": "FLIP",
    "isMainnet": false,
    "minimumDepositAmount": "0",
    "minimumSwapAmount": "0",
    "name": "FLIP",
    "symbol": "FLIP",
  },
]
`;

exports[`ApiService getAssets (sisyphos) gets the correct assets for testnets (Polkadot) 1`] = `
[
  {
    "chain": "Polkadot",
    "contractAddress": undefined,
    "decimals": 10,
    "id": "DOT",
    "isMainnet": false,
    "minimumDepositAmount": "0",
    "minimumSwapAmount": "0",
    "name": "Polkadot",
    "symbol": "DOT",
  },
]
`;

exports[`ApiService getChains gets mainnet chains 1`] = `
[
  {
    "id": "Ethereum",
    "isMainnet": true,
    "name": "Ethereum",
  },
  {
    "id": "Polkadot",
    "isMainnet": true,
    "name": "Polkadot",
  },
  {
    "id": "Bitcoin",
    "isMainnet": true,
    "name": "Bitcoin",
  },
]
`;

exports[`ApiService getChains gets testnet chains (perseverance) 1`] = `
[
  {
    "id": "Ethereum",
    "isMainnet": false,
    "name": "Ethereum",
  },
  {
    "id": "Polkadot",
    "isMainnet": false,
    "name": "Polkadot",
  },
  {
    "id": "Bitcoin",
    "isMainnet": false,
    "name": "Bitcoin",
  },
]
`;

exports[`ApiService getChains gets testnet chains (sisyphos) 1`] = `
[
  {
    "id": "Ethereum",
    "isMainnet": false,
    "name": "Ethereum",
  },
  {
    "id": "Polkadot",
    "isMainnet": false,
    "name": "Polkadot",
  },
  {
    "id": "Bitcoin",
    "isMainnet": false,
    "name": "Bitcoin",
  },
]
`;

exports[`ApiService getQuote gets a route with a quote 1`] = `
{
  "amount": "10000",
  "destAsset": "ETH",
  "destChain": "Ethereum",
  "quote": {
    "egressAmount": "2",
    "id": "string",
    "intermediateAmount": "1",
  },
  "srcAsset": "BTC",
  "srcChain": "Bitcoin",
}
`;

exports[`ApiService getQuote gets a route with a quote 2`] = `
[
  "https://swapperoo.org/quote?amount=10000&srcAsset=BTC&destAsset=ETH",
  {
    "signal": undefined,
  },
]
`;
